scrollbar fix

--- a/src/Pages/02-Bootcampers/02-Bootcampers-Individual/BootcamperProfile.scss
+++ b/src/Pages/02-Bootcampers/02-Bootcampers-Individual/BootcamperProfile.scss
@@ -152,9 +152,6 @@
   // -ms-overflow-style: none; /* IE*/
   // scrollbar-width: none; /* Firefox */
 }
-.individual-profile-projects-container::-webkit-scrollbar {
-  // display: none; /* Safari and Chrome */
-}
 
 .individual-profile-projects {
   width: calc(100% - 250px);
